@@ -1,6 +1,6 @@
 #' Draws lollipop plot of amino acid changes on to Protein structure.
 #'
-#' @description Draws lollipop plot of amino acid changes.
+#' @description Draws lollipop plot of amino acid changes. Protein domains are derived from PFAM database.
 #' @details This function by default looks for fields 'HGVSp_Short', 'AAChange' or 'Protein_Change' in maf file. One can also manually specify field name containing amino acid changes.
 #' @param maf an \code{\link{MAF}} object generated by \code{\link{read.maf}}
 #' @param gene HGNC symbol for which protein structure to be drawn.
